# utils-app

./: CMakeLists.txt  README.md
cmake/: prepare.cmake
scripts/: prepare-commit-msg
src/: CMakeLists.txt  main.cpp
